[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "california-midasapi"
version = "0.0.1"
description = "Python wrapper for California's energy price API MIDAS."
readme = "README.rst"
authors = [
    { name = "MattDahEpic", email = "matt+california-midasapipypi@mattdahepic.com" },
]
license = {text = "MIT"}
keywords = ["california", "api", "energy", "midas", "price"]
classifiers = [
    'Development Status :: 3 - Alpha',
    'Intended Audience :: Developers',
    'Topic :: Scientific/Engineering',
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python :: 3',
]
dependencies = [
    "requests",
    "PyJWT",
    "python-dateutil",
]